GPC/tests/examples/fail/wrongPointers4.gpc


void GPRM::Test::wrongPointers4(bool *b) {

    bool *c = 4 - b;

}
